--- a/index.html
+++ b/index.html
@@ -18,6 +18,17 @@
       learning technical sophistication, probably more. To join our
       movement, <a href="https://learnenough.com/email">sign up for our official email list</a> now.
     </p>
+    
+    <p>
+      <a href="http://twitter.com/learnenough" target="_blank"
+      rel="noopener" style="text-decoration: none;">
+        <img src="images/small_twitte_logo.png">
+      </a>
+      You should follow Learn Enough on Twitter
+      <a href="http://twitter.com/learnenough"
+         target="_blank" rel="noopener">here</a>.
+    </p>
+    
     <p>
       HTML was created by the original "web developer", computer scientist
       <a href="https://en.wikipedia.org/wiki/Tim_Berners-Lee">Tim
