--- a/tags.html
+++ b/tags.html
@@ -48,9 +48,9 @@
      <th>Purpose</th>
    </tr>
         <tr>
-        <td><code>h1</code>&ndash;<code>h6</code>style="padding 20pt"</td>
-        <td>headings style="padding 20pt"</td>
-        <td>include a heading (levels 1&ndash;6) style="padding 20pt"</td>
+        <td style="padding 20pt"><code>h1</code>&ndash;<code>h6</code></td>
+        <td style="padding 20pt">headings</td>
+        <td style="padding 20pt">include a heading (levels 1&ndash;6)</td>
       </tr>
       <tr>
         <td><code>p</code></td>
