--- a/moby_dick.html
+++ b/moby_dick.html
@@ -33,7 +33,8 @@
     </div>
 
     <a href="https://commons.wikimedia.org/wiki/File:Sperm_whale_pod.jpg">
-      <img src="images/sperm_whales.jpg" alt="Sperm whales">
+      <img src="images/sperm_whales.jpg" alt="Sperm whales"
+      style="display: block: margin: 0 auto:">
     </a>
 
     <div>
@@ -43,7 +44,7 @@
       <a href="https://www.softcover.io/read/6070fb03/moby-dick"
          target="_blank" rel="noopener">
         <img src="images/moby_dick.png" alt="Moby Dick" height="200px"
-        style="float: left; margin: 0 40px 0 0;">
+        style="float: left; display: block; margin: 0 auto;">
       </a>
 
       <p>
