--- a/moby_dick.html
+++ b/moby_dick.html
@@ -37,14 +37,14 @@
       style="display: block: margin: 0 auto:">
     </a>
 
-    <div>
+    <div style="width: 500px; margin: 20px auto; padding: 30px; background-color: #fafafa;">
 
       <h3>Moby-Dick: A classic tale of the sea</h3>
 
       <a href="https://www.softcover.io/read/6070fb03/moby-dick"
          target="_blank" rel="noopener">
         <img src="images/moby_dick.png" alt="Moby Dick" height="200px"
-        style="float: left; display: block; margin: 0 auto;">
+        style="float: left; margin: 20 auto;">
       </a>
 
       <p>
