--- a/moby_dick.html
+++ b/moby_dick.html
@@ -6,10 +6,10 @@
   </head>
   <body>
 
-    <div>
-      <a href="index.html"><strong>Home</strong></a>
-      <a href="tags.html">HTML Tags</a>
-      <a href="moby_dick.html">Moby Dick</a>
+    <div style="text-align: right;">
+      <a href="index.html">Home</a>
+      <a href="tags.html" style="margin: 0 0 0 10px;">HTML Tags</a>
+      <a href="moby_dick.html" style="margin: 0 0 0 10px;">Moby Dick</a>
     </div>
 
     <!-- much here to be styled, will do so in last section -->
@@ -44,7 +44,7 @@
       <a href="https://www.softcover.io/read/6070fb03/moby-dick"
          target="_blank" rel="noopener">
         <img src="images/moby_dick.png" alt="Moby Dick" height="200px"
-        style="float: left; margin: 20 auto;">
+        style="float: left; margin: 20px 20px 20px 20px;">
       </a>
 
       <p>
