refactor inline styles into a stylesheet

--- a/index.html
+++ b/index.html
@@ -1,16 +1,12 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <title>Page Title</title>
+    <title>Learn Enough to Be Dangerous</title>
 	<meta charset="utf-8">
+	<link rel="stylesheet" href="css/main.css">
 	
 <style>
-  .nav-menu {
-    text-align: right;
-  }
-  .nav-spacing {
-    margin: 0 0 0 10px;
-  }
+
 </style>	
 	
   </head>
