--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
     
     <p>
       <a href="http://twitter.com/learnenough" target="_blank"
-      rel="noopener" style="text-decoration: none;">
+      rel="noopener" class="image-link">
         <img src="images/small_twitter_logo.png">
       </a>
       You should follow Learn Enough on Twitter
@@ -93,7 +93,7 @@
       <a href="https://www.learnenough.com/">learnenough.com</a>.
     </p>
 
-    <h3>Founders</h2>
+    <h2> id="founders">Founders</h2>
 
     <p>
       <span>Learn Enough to Be Dangerous was founded in 2015 by Michael Hartl, Lee
