--- a/moby_dick.html
+++ b/moby_dick.html
@@ -6,13 +6,14 @@
   </head>
   <body>
 
-    <div style="text-align: right;">
-      <a href="index.html">Home</a>
-      <a href="tags.html" style="margin: 0 0 0 10px;">HTML Tags</a>
-      <a href="moby_dick.html" style="margin: 0 0 0 10px;">Moby Dick</a>
+    
+    <div class="nav-menu">
+      <a href="index.html" style="text-decoration:none;">Home</a>
+      <a href="tags.html" class-"nav-spacing">HTML Tags</a>
+      <a href="moby_dick.html" class="nav-spacing">Moby Dick</a>
     </div>
-
-    <!-- much here to be styled, will do so in last section -->
+ 
+ 
     <header>
       <h1 style="text-align: center;">A Softcover Book Report</h1>
       <h2 style="text-align: center;">Moby-Dick (or, The Whale)</h2>
@@ -37,7 +38,7 @@
       style="display: block: margin: 0 auto:">
     </a>
 
-    <div style="width: 500px; margin: 20px auto; padding: 30px; background-color: #fafafa;">
+    <div class="achtergrond-blok">
 
       <h3>Moby-Dick: A classic tale of the sea</h3>
 
