--- a/tags.html
+++ b/tags.html
@@ -6,12 +6,13 @@
   </head>
   <body>
 
-    <div style="text-align: right; text-decoration: none ">
-      <a href="index.html">Home</a>
-      <a href="tags.html" style="margin: 0 0 0 10px;">HTML Tags</a>
-      <a href="moby_dick.html" style="margin: 0 0 0 10px;">Moby Dick</a>
+    
+    <div class="nav-menu">
+      <a href="index.html" style="text-decoration:none;">Home</a>
+      <a href="tags.html" class-"nav-spacing">HTML Tags</a>
+      <a href="moby_dick.html" class="nav-spacing">Moby Dick</a>
     </div>
-
+    
 <header>
     <h1>Important HTML tags</h1>
 </header>
